--- a/src/Microsoft.VisualStudio.Editors/PropPages/xlf/BuildPropPage.cs.xlf
+++ b/src/Microsoft.VisualStudio.Editors/PropPages/xlf/BuildPropPage.cs.xlf
@@ -7,6 +7,16 @@
         <target state="translated">5</target>
         <note />
       </trans-unit>
+      <trans-unit id="errorsAndWarningsGroupBox.Text">
+        <source>Errors and warnings</source>
+        <target state="new">Errors and warnings</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="generalGroupBox.Text">
+        <source>General</source>
+        <target state="new">General</target>
+        <note />
+      </trans-unit>
       <trans-unit id="lblConditionalCompilationSymbols.Text">
         <source>Conditional compilation s&amp;ymbols:</source>
         <target state="translated">S&amp;ymboly podmíněné kompilace:</target>
@@ -17,24 +27,9 @@
         <target state="translated">Může mít hodnotu &amp;null:</target>
         <note />
       </trans-unit>
-      <trans-unit id="outputLabel.Text">
+      <trans-unit id="outputGroupBox.Text">
         <source>Output</source>
-        <target state="translated">Výstup</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="generalLabel.Text">
-        <source>General</source>
-        <target state="translated">Obecné</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="treatWarningsAsErrorsLabel.Text">
-        <source>Treat warnings as errors</source>
-        <target state="translated">Zpracovávat upozornění jako chyby</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="errorsAndWarningsLabel.Text">
-        <source>Errors and warnings</source>
-        <target state="translated">Chyby a upozornění</target>
+        <target state="new">Output</target>
         <note />
       </trans-unit>
       <trans-unit id="chkRegisterForCOM.Text">
@@ -145,6 +140,11 @@
       <trans-unit id="chkDefineDebug.Text">
         <source>Define DEB&amp;UG constant</source>
         <target state="translated">Definovat konstant&amp;u DEBUG</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="treatWarningsAsErrorsGroupBox.Text">
+        <source>Treat warnings as errors</source>
+        <target state="new">Treat warnings as errors</target>
         <note />
       </trans-unit>
       <trans-unit id="txtSpecificWarnings.AccessibleName">
