--- a/src/Microsoft.VisualStudio.Editors/PropPages/xlf/BuildPropPage.ja.xlf
+++ b/src/Microsoft.VisualStudio.Editors/PropPages/xlf/BuildPropPage.ja.xlf
@@ -7,6 +7,16 @@
         <target state="translated">5</target>
         <note />
       </trans-unit>
+      <trans-unit id="errorsAndWarningsGroupBox.Text">
+        <source>Errors and warnings</source>
+        <target state="new">Errors and warnings</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="generalGroupBox.Text">
+        <source>General</source>
+        <target state="new">General</target>
+        <note />
+      </trans-unit>
       <trans-unit id="lblConditionalCompilationSymbols.Text">
         <source>Conditional compilation s&amp;ymbols:</source>
         <target state="translated">条件付きコンパイル シンボル(&amp;Y):</target>
@@ -17,24 +27,9 @@
         <target state="translated">Null 許容(&amp;B):</target>
         <note />
       </trans-unit>
-      <trans-unit id="outputLabel.Text">
+      <trans-unit id="outputGroupBox.Text">
         <source>Output</source>
-        <target state="translated">出力</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="generalLabel.Text">
-        <source>General</source>
-        <target state="translated">全般</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="treatWarningsAsErrorsLabel.Text">
-        <source>Treat warnings as errors</source>
-        <target state="translated">警告をエラーとして扱う</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="errorsAndWarningsLabel.Text">
-        <source>Errors and warnings</source>
-        <target state="translated">エラーおよび警告</target>
+        <target state="new">Output</target>
         <note />
       </trans-unit>
       <trans-unit id="chkRegisterForCOM.Text">
@@ -145,6 +140,11 @@
       <trans-unit id="chkDefineDebug.Text">
         <source>Define DEB&amp;UG constant</source>
         <target state="translated">DEBUG 定数の定義(&amp;U)</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="treatWarningsAsErrorsGroupBox.Text">
+        <source>Treat warnings as errors</source>
+        <target state="new">Treat warnings as errors</target>
         <note />
       </trans-unit>
       <trans-unit id="txtSpecificWarnings.AccessibleName">
