Disable Build Acceleration for known packages
While rare, it's possible for a NuGet package to include `.props` and/or `.targets` files that customise the build in a way that's not compatible with Build Acceleration. Ideally such packages would also set `AccelerateBuildsInVisualStudio` to `false`, however that's not always an option.

To address this situation, this change introduces the ability to specify NuGet packages that, when present in a project, will disable Build Acceleration.

We add one known package (`Microsoft.VSSDK.BuildTools`, for VSIX projects) to our design-time `.targets` file, but SDKs and customers may add their own items too.

For example, if `MyPackage` is known to be incompatible with Build Acceleration, adding a `BuildAccelerationIncompatiblePackage` item  to your `Directory.Build.props` will automatically cause Build Acceleration to be disabled for any project that references that `MyPackage`:

```xml
<Project>
  <PropertyGroup>
    <AccelerateBuildsInVisualStudio>true</AccelerateBuildsInVisualStudio>
  </PropertyGroup>
  <ItemGroup>
    <BuildAccelerationIncompatiblePackage Include="MyPackage" />
  </ItemGroup>
</Project>
```

When a project is found to have an incompatible project reference, the FUTDC log displays a message to that effect, such as:

> Build acceleration has been disabled for this project due to known incompatible NuGet package reference(s) 'Microsoft.VSSDK.BuildTools'. See https://aka.ms/vs-build-acceleration.

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/Resources.resx
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/Resources.resx
@@ -468,6 +468,10 @@ This project was loaded using the wrong project type, likely as a result of rena
   <data name="FUTD_BuildAccelerationIsNotEnabledForThisProject" xml:space="preserve">
     <value>Build acceleration is not enabled for this project. See https://aka.ms/vs-build-acceleration.</value>
   </data>
+  <data name="BuildAccelerationDisabledDueToIncompatiblePackageReferences_1" xml:space="preserve">
+    <value>Build acceleration has been disabled for this project due to known incompatible NuGet package reference(s) {0}. See https://aka.ms/vs-build-acceleration.</value>
+    <comment>{0} is a comma-separated list of NuGet package names.</comment>
+  </data>
   <data name="DiagnosticLevel_None" xml:space="preserve">
     <value>None</value>
     <comment>Indicates that a diagnostic (i.e. a compiler warning) should be disabled.</comment>
