Move IsPublishable property from ApplicationPropertyPage > BuildPropertyPage (Publish category).

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/xlf/BuildPropertyPage.xaml.cs.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/xlf/BuildPropertyPage.xaml.cs.xlf
@@ -82,6 +82,16 @@
         <target state="translated">Kompatibilní s AOT</target>
         <note />
       </trans-unit>
+      <trans-unit id="BoolProperty|IsPublishable|Description">
+        <source>Allows the "Publish" target to run. This property only affects processes that use *.proj files and "Publish" target, such as "dotnet publish" command. It does not affect publishing in Visual Studio. The default value is true.</source>
+        <target state="new">Allows the "Publish" target to run. This property only affects processes that use *.proj files and "Publish" target, such as "dotnet publish" command. It does not affect publishing in Visual Studio. The default value is true.</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="BoolProperty|IsPublishable|DisplayName">
+        <source>Publishing</source>
+        <target state="new">Publishing</target>
+        <note />
+      </trans-unit>
       <trans-unit id="BoolProperty|IsTrimmable|Description">
         <source>Marks your assembly as trimmable and enables trim warnings for that project.</source>
         <target state="translated">Označí sestavení jako oříznutelné a povolí upozornění na střih pro daný projekt.</target>
