--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/xlf/BuildPropertyPage.xaml.ko.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/xlf/BuildPropertyPage.xaml.ko.xlf
@@ -82,6 +82,16 @@
         <target state="translated">AOT 호환 가능</target>
         <note />
       </trans-unit>
+      <trans-unit id="BoolProperty|IsPublishable|Description">
+        <source>Allows the "Publish" target to run. This property only affects processes that use *.proj files and "Publish" target, such as "dotnet publish" command. It does not affect publishing in Visual Studio. The default value is true.</source>
+        <target state="new">Allows the "Publish" target to run. This property only affects processes that use *.proj files and "Publish" target, such as "dotnet publish" command. It does not affect publishing in Visual Studio. The default value is true.</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="BoolProperty|IsPublishable|DisplayName">
+        <source>Publishing</source>
+        <target state="new">Publishing</target>
+        <note />
+      </trans-unit>
       <trans-unit id="BoolProperty|IsTrimmable|Description">
         <source>Marks your assembly as trimmable and enables trim warnings for that project.</source>
         <target state="translated">어셈블리를 트리밍 가능으로 표시하고 해당 프로젝트에 대한 트리밍 경고를 활성화합니다.</target>
