--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSPackage.zh-Hans.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSPackage.zh-Hans.xlf
@@ -108,8 +108,8 @@
         <note />
       </trans-unit>
       <trans-unit id="Setting_FastUpToDateCheck_LoggingLevel_Title">
-        <source>Logging Level</source>
-        <target state="translated">日志记录级别</target>
+        <source>Logging level</source>
+        <target state="needs-review-translation">日志记录级别</target>
         <note />
       </trans-unit>
       <trans-unit id="Setting_FastUpToDateCheck_LoggingLevel_Verbose">
@@ -133,23 +133,23 @@
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_FastUpToDateCheck">
-        <source>Up to date checks</source>
-        <target state="translated">最新检查</target>
+        <source>Up-to-date Checks</source>
+        <target state="needs-review-translation">最新检查</target>
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_FileNestingSettings">
-        <source>File nesting settings</source>
-        <target state="translated">文件嵌套设置</target>
+        <source>File Nesting</source>
+        <target state="needs-review-translation">文件嵌套设置</target>
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_MultiTargetingSettings">
-        <source>Multi-targeting settings</source>
-        <target state="translated">多目标设置</target>
+        <source>Multi-targeting</source>
+        <target state="needs-review-translation">多目标设置</target>
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_SdkStyleProjects">
-        <source>SDK-style projects</source>
-        <target state="translated">SDK 样式项目</target>
+        <source>SDK-style Projects</source>
+        <target state="needs-review-translation">SDK 样式项目</target>
         <note />
       </trans-unit>
     </body>
