--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSPackage.it.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSPackage.it.xlf
@@ -108,8 +108,8 @@
         <note />
       </trans-unit>
       <trans-unit id="Setting_FastUpToDateCheck_LoggingLevel_Title">
-        <source>Logging Level</source>
-        <target state="translated">Livello di registrazione</target>
+        <source>Logging level</source>
+        <target state="needs-review-translation">Livello di registrazione</target>
         <note />
       </trans-unit>
       <trans-unit id="Setting_FastUpToDateCheck_LoggingLevel_Verbose">
@@ -133,23 +133,23 @@
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_FastUpToDateCheck">
-        <source>Up to date checks</source>
-        <target state="translated">Controlli aggiornamenti</target>
+        <source>Up-to-date Checks</source>
+        <target state="needs-review-translation">Controlli aggiornamenti</target>
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_FileNestingSettings">
-        <source>File nesting settings</source>
-        <target state="translated">Impostazioni di annidamento file</target>
+        <source>File Nesting</source>
+        <target state="needs-review-translation">Impostazioni di annidamento file</target>
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_MultiTargetingSettings">
-        <source>Multi-targeting settings</source>
-        <target state="translated">Impostazioni multi-targeting</target>
+        <source>Multi-targeting</source>
+        <target state="needs-review-translation">Impostazioni multi-targeting</target>
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_SdkStyleProjects">
-        <source>SDK-style projects</source>
-        <target state="translated">Progetti di tipo SDK</target>
+        <source>SDK-style Projects</source>
+        <target state="needs-review-translation">Progetti di tipo SDK</target>
         <note />
       </trans-unit>
     </body>
