--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSPackage.ja.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSPackage.ja.xlf
@@ -108,8 +108,8 @@
         <note />
       </trans-unit>
       <trans-unit id="Setting_FastUpToDateCheck_LoggingLevel_Title">
-        <source>Logging Level</source>
-        <target state="translated">ログ記録レベル</target>
+        <source>Logging level</source>
+        <target state="needs-review-translation">ログ記録レベル</target>
         <note />
       </trans-unit>
       <trans-unit id="Setting_FastUpToDateCheck_LoggingLevel_Verbose">
@@ -133,23 +133,23 @@
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_FastUpToDateCheck">
-        <source>Up to date checks</source>
-        <target state="translated">最新状態チェック</target>
+        <source>Up-to-date Checks</source>
+        <target state="needs-review-translation">最新状態チェック</target>
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_FileNestingSettings">
-        <source>File nesting settings</source>
-        <target state="translated">ファイルの入れ子設定</target>
+        <source>File Nesting</source>
+        <target state="needs-review-translation">ファイルの入れ子設定</target>
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_MultiTargetingSettings">
-        <source>Multi-targeting settings</source>
-        <target state="translated">マルチターゲット設定</target>
+        <source>Multi-targeting</source>
+        <target state="needs-review-translation">マルチターゲット設定</target>
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_SdkStyleProjects">
-        <source>SDK-style projects</source>
-        <target state="translated">SDK スタイルのプロジェクト</target>
+        <source>SDK-style Projects</source>
+        <target state="needs-review-translation">SDK スタイルのプロジェクト</target>
         <note />
       </trans-unit>
     </body>
