--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSPackage.ko.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSPackage.ko.xlf
@@ -108,8 +108,8 @@
         <note />
       </trans-unit>
       <trans-unit id="Setting_FastUpToDateCheck_LoggingLevel_Title">
-        <source>Logging Level</source>
-        <target state="translated">로깅 수준</target>
+        <source>Logging level</source>
+        <target state="needs-review-translation">로깅 수준</target>
         <note />
       </trans-unit>
       <trans-unit id="Setting_FastUpToDateCheck_LoggingLevel_Verbose">
@@ -133,23 +133,23 @@
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_FastUpToDateCheck">
-        <source>Up to date checks</source>
-        <target state="translated">최신 검사</target>
+        <source>Up-to-date Checks</source>
+        <target state="needs-review-translation">최신 검사</target>
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_FileNestingSettings">
-        <source>File nesting settings</source>
-        <target state="translated">파일 중첩 설정</target>
+        <source>File Nesting</source>
+        <target state="needs-review-translation">파일 중첩 설정</target>
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_MultiTargetingSettings">
-        <source>Multi-targeting settings</source>
-        <target state="translated">다중 대상 지정 설정</target>
+        <source>Multi-targeting</source>
+        <target state="needs-review-translation">다중 대상 지정 설정</target>
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_SdkStyleProjects">
-        <source>SDK-style projects</source>
-        <target state="translated">SDK 스타일 프로젝트</target>
+        <source>SDK-style Projects</source>
+        <target state="needs-review-translation">SDK 스타일 프로젝트</target>
         <note />
       </trans-unit>
     </body>
