--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSPackage.zh-Hant.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSPackage.zh-Hant.xlf
@@ -108,8 +108,8 @@
         <note />
       </trans-unit>
       <trans-unit id="Setting_FastUpToDateCheck_LoggingLevel_Title">
-        <source>Logging Level</source>
-        <target state="translated">記錄層級</target>
+        <source>Logging level</source>
+        <target state="needs-review-translation">記錄層級</target>
         <note />
       </trans-unit>
       <trans-unit id="Setting_FastUpToDateCheck_LoggingLevel_Verbose">
@@ -133,23 +133,23 @@
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_FastUpToDateCheck">
-        <source>Up to date checks</source>
-        <target state="translated">最新版檢查</target>
+        <source>Up-to-date Checks</source>
+        <target state="needs-review-translation">最新版檢查</target>
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_FileNestingSettings">
-        <source>File nesting settings</source>
-        <target state="translated">檔案巢狀設定</target>
+        <source>File Nesting</source>
+        <target state="needs-review-translation">檔案巢狀設定</target>
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_MultiTargetingSettings">
-        <source>Multi-targeting settings</source>
-        <target state="translated">多重目標設定</target>
+        <source>Multi-targeting</source>
+        <target state="needs-review-translation">多重目標設定</target>
         <note />
       </trans-unit>
       <trans-unit id="Settings_Category_SdkStyleProjects">
-        <source>SDK-style projects</source>
-        <target state="translated">SDK 樣式專案</target>
+        <source>SDK-style Projects</source>
+        <target state="needs-review-translation">SDK 樣式專案</target>
         <note />
       </trans-unit>
     </body>
