--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSPackage.es.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSPackage.es.xlf
@@ -123,8 +123,8 @@
         <note />
       </trans-unit>
       <trans-unit id="Setting_FileNesting_PreferSingleTargetBuilds_Description">
-        <source>When starting a project that targets multiple frameworks the build time can be reduced by building only a single one.</source>
-        <target state="translated">Al iniciar un proyecto que se dirija a varios marcos, el tiempo de compilación puede reducirse compilando solo uno.</target>
+        <source>When starting a project that targets multiple frameworks, build time can be reduced by building only a single one.</source>
+        <target state="needs-review-translation">Al iniciar un proyecto que se dirija a varios marcos, el tiempo de compilación puede reducirse compilando solo uno.</target>
         <note />
       </trans-unit>
       <trans-unit id="Setting_FileNesting_PreferSingleTargetBuilds_Title">
