--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSPackage.ko.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSPackage.ko.xlf
@@ -123,8 +123,8 @@
         <note />
       </trans-unit>
       <trans-unit id="Setting_FileNesting_PreferSingleTargetBuilds_Description">
-        <source>When starting a project that targets multiple frameworks the build time can be reduced by building only a single one.</source>
-        <target state="translated">여러 프레임워크를 대상으로 하는 프로젝트를 시작할 때 빌드 시간은 단일 프레임워크만 빌드하여 줄일 수 있습니다.</target>
+        <source>When starting a project that targets multiple frameworks, build time can be reduced by building only a single one.</source>
+        <target state="needs-review-translation">여러 프레임워크를 대상으로 하는 프로젝트를 시작할 때 빌드 시간은 단일 프레임워크만 빌드하여 줄일 수 있습니다.</target>
         <note />
       </trans-unit>
       <trans-unit id="Setting_FileNesting_PreferSingleTargetBuilds_Title">
