--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSPackage.ru.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSPackage.ru.xlf
@@ -123,8 +123,8 @@
         <note />
       </trans-unit>
       <trans-unit id="Setting_FileNesting_PreferSingleTargetBuilds_Description">
-        <source>When starting a project that targets multiple frameworks the build time can be reduced by building only a single one.</source>
-        <target state="translated">При запуске проекта, нацеленного на несколько платформ, время сборки можно сократить, если выполнить сборку только для одной платформы.</target>
+        <source>When starting a project that targets multiple frameworks, build time can be reduced by building only a single one.</source>
+        <target state="needs-review-translation">При запуске проекта, нацеленного на несколько платформ, время сборки можно сократить, если выполнить сборку только для одной платформы.</target>
         <note />
       </trans-unit>
       <trans-unit id="Setting_FileNesting_PreferSingleTargetBuilds_Title">
